Fix some modal styling issues
Header too tall.

Not rendering on top of drawing canvas.

Blurry background should be part of the modal, not the about view.

--- a/public/styles.css
+++ b/public/styles.css
@@ -363,7 +363,6 @@ h1 i {
   transition: all 0.2s ease-out;
   opacity: 1;
   transform: translate(0, 0);
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
 }
@@ -388,19 +387,15 @@ h1 i {
   transform: rotate(-90deg);
 }
 .modal-actions {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  z-index: 1;
   padding: 15px;
   display: grid;
   grid-template-columns: 60px auto 60px;
   column-gap: 10px;
   align-items: center;
-  justify-content: center;
   justify-content: space-between;
-  min-height: var(--header-min-height);
   font-size: 18px;
+  flex: 0;
 }
 .modal-title {
   font-size: 20px;
@@ -424,7 +419,7 @@ h1 i {
 .blurry-background {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 747.2 726.7" fill="%23427aac"><path d="M539.8 137.6c98.3 69 183.5 124 203 198.4 19.3 74.4-27.1 168.2-93.8 245-66.8 76.8-153.8 136.6-254.2 144.9-100.6 8.2-214.7-35.1-292.7-122.5S-18.1 384.1 7.4 259.8C33 135.6 126.3 19 228.5 2.2c102.1-16.8 213.2 66.3 311.3 135.4z"></path></svg>');
   background-repeat: no-repeat;
-  background-size: 60vh 60vh;
+  background-size: 40vh 40vh;
   position: absolute;
   left: 50%;
   top: 0;
@@ -910,6 +905,8 @@ button.auto-replay-button {
 @media (max-width: 500px) {
   .about-section-content {
     column-gap: 30px;
+  }
+  .about-section {
     font-size: 14px;
   }
 }
